@@ -17,3 +17,4 @@
 # $Id: clean.sh,v 1.1.6.2 2011/05/07 05:53:23 each Exp $
 
 rm -f good.conf.in good.conf.out badzero.conf
+rm -rf test.keydir
